--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 {% include header.html %}
+{% include analytics.html %}
 <main>
     {% include slider.html %}
     {% include what-is-glancecam.html %}
