Transformed MediaKit in actual website

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@ layout: default
     {% include countdown.html %}
 	{% include glancecam3.html %}
     {% include call_to_action.html %}
-	{% include future-and-contacts.html %}
+	{% include details-and-contacts.html %}
 	{% include portfolios_2.html %}
 	{% include testimonials.html %}
+	{% include call_to_action2.html %}
 </main>
