--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@ layout: default
     {% include countdown.html %}
 	{% include glancecam3.html %}
     {% include call_to_action.html %}
-	{% include details-and-contacts.html %}
-	{% include portfolios_2.html %}
+	{% include use-cases-and-features.html %}
 	{% include testimonials.html %}
+	{% include requirements-links-contacts.html %}
+	{% include portfolios_2.html %}
 	{% include call_to_action2.html %}
 </main>
